src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Review_Trigger__c</fullName>
        <label>Review Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fraud Flag</fullName>
                </value>
                <value>
                    <fullName>General Feeling of Discomfort</fullName>
                </value>
                <value>
                    <fullName>O/N Report</fullName>
                </value>
                <value>
                    <fullName>PlusCheck Report</fullName>
                </value>
                <value>
                    <fullName>Returned Payments</fullName>
                </value>
                <value>
                    <fullName>SaferPayments</fullName>
                </value>
                <value>
                    <fullName>Threatmatrix</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAFE_Analyst_Name__c</fullName>
        <formula>(Assigned_To__r.FirstName + &quot; &quot; + Assigned_To__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAFE Analyst Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAFE_Deadline__c</fullName>
        <formula>Date_SAFE_Reported__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAFE Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAFE_Transaction_Count__c</fullName>
        <label>SAFE Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAR_Due_Date__c</fullName>
        <formula>Date_Resolved__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAR_File_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAR File Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAR_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAR Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAR_Y_N__c</fullName>
        <formula>IF(
    OR(
        AND(Identified_Suspect_Name__c  &lt;&gt; &quot;&quot;, Allowable_Dispute_Dollars__c  &gt;= 5000.00),
        Allowable_Dispute_Dollars__c  &gt;= 25000.00),
    True,
    False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAR Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCAS_VAR__c</fullName>
        <label>SCAS/VAR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCAS</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Amount__c</fullName>
        <label>SP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SP Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Due_Date__c</fullName>
        <formula>X2nd_Presentment_Received__c + 45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Transaction_Count__c</fullName>
        <label>SP Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smart_Funds_Provisional_Credit_Amt__c</fullName>
        <label>Smart Funds Provisional Credit Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smart_Funds_Provisional_Credit_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Smart Funds Provisional Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Fraud_Occurred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Fraud Occurred</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Station Information</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_s_Formal_Name__c</fullName>
        <label>TC&apos;s Formal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>76® FLEET BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>7-ELEVEN BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ADVANTAGE BRANDS BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>AFI Automated Fueling Charge Card Agreement</fullName>
                </value>
                <value>
                    <fullName>ALLSTATE LEASING BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ALON BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>AMERICAN CAR CARE CENTERS BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>AMERICAN LUBEFAST BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>AMI LEASING BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>BBL FLEET BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>BIZUNITE® BUSINESS CHARGE ACCOUNT AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>BOB PLUS CARD PROGRAM BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>BRAKE MAX BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>CFF Chevron Standard Charge Card Agreement</fullName>
                </value>
                <value>
                    <fullName>CHEVRON PUERTO RICO BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>CHRONISTER OIL, d/b/a QUIK N EZ BUSINESS CHARGE ACCOUNT AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>CIRCLE K BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>CITGO BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>CITGO FLEET SELECT FLEX &amp; UNIVERSAL FLEX BUSINESS CREDIT AGREEMENT</fullName>
                    <isActive>false</isActive>
                    <label>CITGO FLEET SELECT FLEX &amp; UNIVERSAL FLEX BUSINESS CREDIT AGREEMENT</label>
                </value>
                <value>
                    <fullName>CLARK BRANDS BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>Conditions générales d’utilisation des cartes Affaires Esso et Parc automobile Esso</fullName>
                </value>
                <value>
                    <fullName>CONOCO® FLEET BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>CROWN BUSINESS CHARGE ACCOUNT AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>DHL INDEPENDENT CONTRACTORS/WEX BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>DILLON/KROGER BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>DISCOUNT ZONE BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>DOC’S BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>DODGE BUSINESS LINK BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>EAST COAST PETROLEUM BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE BUSINESS CHARGE CARD AGREEMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Request_Amount__c</fullName>
        <label>Ticket Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tickets_Available__c</fullName>
        <label>Tickets Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No Longer Eligible</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Claim_Dollars__c</fullName>
        <label>Total Claim Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Loss__c</fullName>
        <label>Total Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Disputed_Transactions__c</fullName>
        <label>Total # of Disputed Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trans_Count__c</fullName>
        <label>Trans Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Dispute__c</fullName>
        <formula>IF(Claim_Status__c = &quot;Closed&quot;,
IF(TEXT(Dispute_Type__c) = &quot;Driver&quot;, &quot;Driver&quot;,
IF(TEXT(Dispute_Type__c) = &quot;Duplicate Card(s)&quot;, &quot;Duplicate Card(s)&quot;,
IF(TEXT(Dispute_Type__c) = &quot;Lost/Stolen&quot;, &quot;Lost/Stolen&quot;, 
IF(TEXT(Dispute_Type__c) = &quot;Network / Terminal Data Issue - Not Fraud&quot;, &quot;Network / Terminal Data Issue - Not Fraud&quot;,
IF(TEXT(Dispute_Type__c) = &quot;White Plastic (Skimmed)&quot;, &quot;White Plastic (Skimmed)&quot;, &quot;Other&quot;))))),
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Dispute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veh_Card_For_Email_Merge__c</fullName>
        <formula>Fraud_Claim_Asset__r.Vehicle_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Veh Card # For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WEX Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Adjustment_Code__c</fullName>
        <label>WEX-Adjustment Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AH - Goodwill Write Off</fullName>
                </value>
                <value>
                    <fullName>AJ - Operational Error (Systems error)</fullName>
                </value>
                <value>
                    <fullName>AK - Write Off due to Fraud</fullName>
                </value>
                <value>
                    <fullName>AW - Write off due to Relationship Issues</fullName>
                </value>
                <value>
                    <fullName>AX - Internal Error (Human error)</fullName>
                </value>
                <value>
                    <fullName>Multiple Codes Used</fullName>
                </value>
                <value>
                    <fullName>Recourse 92</fullName>
                </value>
                <value>
                    <fullName>Recourse to Collection Agency</fullName>
                </value>
                <value>
                    <fullName>RELAT- Relationship</fullName>
                </value>
                <value>
                    <fullName>SMBAL- Small Balance WO</fullName>
                </value>
                <value>
                    <fullName>WEX Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WEX_Liable_Amount__c</fullName>
        <formula>IF(Claim_Status__c = &quot;Closed&quot;, WEX_Loss__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Liable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WEX_Loss__c</fullName>
        <label>WEX Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WEX_Non_Fraud_Dept_Liability_Assessed_To__c</fullName>
        <label>WEX Non-Fraud Dept Liability Assessed To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Premium Fleet</fullName>
                </value>
                <value>
                    <fullName>Relationship Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WEX_Non_Fraud_Dept_Loss__c</fullName>
        <label>WEX Non-Fraud Dept Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_CB_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>1st CB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_CB_Transaction_Count__c</fullName>
        <label>1st CB Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Chargeback_Amt__c</fullName>
        <label>1st Chargeback Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Presentment_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>2nd Presentment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X60_Day_Rule_Dispute_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>60 Day Rule Dispute Start Date</label>
        <type>Date</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>WEX_Fleet</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Resolved__c</columns>
        <columns>Resolution__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Claim__c.WEX_Fleet</value>
        </filters>
        <filters>
            <field>Invest_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Received__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Resolved__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Resolution__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>WEX Fleet</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}-{0000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>WEX_Fleet</fullName>
        <active>true</active>
        <label>WEX Fleet</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>